--- a/public/css/index.css
+++ b/public/css/index.css
@@ -354,7 +354,8 @@ body {
   margin-left: 20px;
 }
 .modal-registro {
-  width: 80% !important;
+  width: 90% !important;
+  height: 90%;
 }
 .registro-bienvenida {
   text-align: center;
