--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,11 +55,17 @@
 }
 
 .search-button{
-background-color: #126798;
-box-shadow: none;
-width: fit-content;
-border: none;
-text-align: center;
+  right: 0%;
+  position: absolute;
+  background-color: #126798;
+  box-shadow: none;
+  /* width: fit-content; */
+  border: none;
+  width: 21%;
+  line-height: 3;
+  height: 14%;
+  text-align: center;
+  margin-top: 4%;
 }
 
 body {
@@ -74,6 +80,7 @@ body {
   text-align: center;
   position: fixed;
   width: 100%;
+  z-index: 2000;
 }
 .headerppal .titulo {
   color: #fff;
@@ -89,9 +96,7 @@ body {
   padding-bottom: 15px;
 }
 .headerppal .header-logotipo {
-  margin-right: 5em;
-  margin-left: 50px;
-  margin-top: 20px;
+  margin: 0px 5em 0 46px;
 }
 .headerppal .header-logotipo img {
   border-right-style: solid;
@@ -184,7 +189,6 @@ body {
 }
 
 .footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -279,24 +283,24 @@ body {
   font-size: 30px;
   font-family: "Flaticon";
 }
-.posts {
-  padding: 0.8em;
-  margin: 0px;
-  margin-bottom: 50px;
-  text-align: center;
-  margin-top: 10px;
-}
-.posts .post {
-  background: #fff;
-  border: 1px solid #000;
-  box-shadow: 10px 9px 25px -1px rgba(0,0,0,0.75);
-  display: block;
-  margin-bottom: 1.5em;
-  margin-right: 1.5em;
-  margin-top: -100px;
-  width: 100%;
-  text-align: left;
-}
+/*.posts {*/
+/*  padding: 0.8em;*/
+/*  margin: 0px;*/
+/*  margin-bottom: 50px;*/
+/*  text-align: center;*/
+/*  margin-top: 10px;*/
+/*}*/
+/*.posts .post {*/
+/*  background: #fff;*/
+/*  border: 1px solid #000;*/
+/*  box-shadow: 10px 9px 25px -1px rgba(0,0,0,0.75);*/
+/*  display: block;*/
+/*  margin-bottom: 1.5em;*/
+/*  margin-right: 1.5em;*/
+/*  margin-top: -100px;*/
+/*  width: 100%;*/
+/*  text-align: left;*/
+/*}*/
 .posts .post .post-calificacion {
   text-align: center;
   padding: 0.5em;
@@ -492,16 +496,6 @@ body {
     width: auto;
   }
   .menu-center .menu-div{
-    display: inline-block;
-    margin-top: 25px;
-    height: auto;
-    background: #fff;
-    border: 1px solid #000;
-    box-shadow: 10px 9px 25px -1px rgba(0,0,0,0.75);
-    margin-bottom: 1.5em;
-    margin-right: 1.5em;
-    margin-left: 1.5em;
-    width: 15%;
     text-align: center;
   }
 
@@ -532,12 +526,12 @@ body {
 
   .menu-center .menu-div .menu-div-img{
     border-right-style: solid;
-  border-width: 2px;
-  border-color: #fff;
-  height: 230px;
-  width: 230px;
-  padding: 40px;
-  transition: 0.6s;
+    border-width: 2px;
+    border-color: #fff;
+    height: auto;
+    width: 100%;
+    padding: 40px;
+    transition: 0.6s;
   }
   .menu ul {
     height: 40px;
@@ -574,9 +568,8 @@ body {
   }
   .posts .post {
     display: block;
-    margin-top: 25px;
-    width: 85%;
-    height: 120px;
+    width: 78%;
+    margin-left: 2%;
   }
   .posts .post .post-descripcion {
     height: 50px;
@@ -622,4 +615,46 @@ body {
   .modal-registro {
     width: 70% !important;
   }
+}
+
+.current {
+ color: green;
+}
+
+#pagin li {
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  padding: 10px;
+  display: inline-block;
+}
+
+.prev {
+  cursor: pointer;
+}
+
+.next {
+  cursor: pointer;
+}
+
+.last{
+  cursor:pointer;
+  margin-left:5px;
+}
+
+.first{
+  cursor:pointer;
+  margin-right:5px;
+}
+
+#pagin {
+  text-align: center;
+}
+
+.card {
+  margin-right: 1% !important;
+  position: relative;
+  margin: .5rem 0 1rem 0;
+  background-color: #fff;
+  transition: box-shadow .25s;
+  border-radius: 2px;
 }
